fix overflow with max width on images

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ main {
 
 .ig-photo {
   width: 400px;
+  max-width: 100%;
   margin-top: 75px;
   margin-bottom: 30px;
 }
@@ -123,8 +124,9 @@ footer {
   align-items: center;
   margin-top: 100px;
   width: 100vw;
+  max-width: 100%;
   margin-top: 100px;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 footer a {
@@ -190,5 +192,9 @@ footer a {
     align-items: center;
     float: right;
     width: 70vw;
+  }
+
+  footer {
+    justify-content: flex-end;
   }
 }
